api-explorer for server rest api

--- a/apim-analytics-server/public/index.html
+++ b/apim-analytics-server/public/index.html
@@ -9,9 +9,8 @@
 <body>
     <h1>Solace Async API Management Analytics Server</h1>
     <ul>
-        <li>
-            <h3><a href="/about.json">About</a></h3>
-        </li>
+        <li><h3><a href="/api-explorer/">Interactive API Doc (Swagger)</a></h3></li>
+        <li><h3><a href="/about.json">About</a></h3></li>
     </ul>
 </body>
 
